style.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

h1 {
    margin-top: 50px;
    margin-bottom: 100px;
    text-align: center;
    font-family: "Comic Sans MS", cursive, sans-serif;
}

h2 {
    font-family: "Comic Sans MS", cursive, sans-serif;
    text-align: center;
}

p {
    margin: 5px;
    font-family: "Comic Sans MS", cursive, sans-serif;
    margin: 5px;
}

.row {
    width: 100%;
    overflow: auto;
}

.tag {
    width: 120px;
    height: 35px;
    position: relative;
    float: right;
}

div {
    overflow: scroll;
}

#chickenTag {
    background: rgb(235, 182, 84);
}

#beefTag {
    background: rgb(187, 88, 88);
}

#sushiTag {
    background: rgb(250, 248, 108);
}

/* Desktop View */
@media (min-width: 992px) {
    .col-lg-4 {
        background-color: rgb(192, 192, 192);
        float: left;
        border: 3px solid black;
        width: 25%;
        height: 160px;
    }
    #chicken {
        margin-left: 50px;
    }
    #beef {
        position: absolute;
        left: 50%;
        transform: translate(-50%, 0%);
    }
    #sushi {
        float: right;
        margin-right: 50px;
    }
}

/* Tablet View */
@media (min-width: 768px) and (max-width: 991px) {
    .col-md-6 {
        background-color: rgb(192, 192, 192);
        float: left;
        border: 3px solid black;
        width: 40%;
        height: 160px;
        margin-bottom: 50px;
    }
    #chicken {
        margin-left: 50px;
    }
    #beef {
        float: right;
        margin-right: 50px;
    }
    #sushi {
        margin-left: 50px;
        width: calc(100% - 100px);
    }
}

/* Mobile View */
@media (max-width: 767px) {
    .col-sm-12 {
        background-color: rgb(192, 192, 192);
        border: 3px solid black;
        margin-bottom: 50px;
        width: calc(100% - 100px);
        height: 160px;
    }
    #chicken {
        margin-left: 50px;
    }
    #beef {
        margin-left: 50px;
    }
    #sushi {
        margin-left: 50px;
    }
}

